--- a/shark-week/package.json
+++ b/shark-week/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.2.1",
+    "d3": "^5.9.7",
+    "material-ui": "^0.20.2",
+    "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-moment": "^0.9.2",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "react-simple-storage": "^1.4.1",
+    "react-twitter-embed": "^2.0.8",
+    "react-youtube": "^7.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
