--- a/shark-week/package.json
+++ b/shark-week/package.json
@@ -6,9 +6,9 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-regular": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.2.1",
-    "d3": "^5.9.7",
     "material-ui": "^0.20.2",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
@@ -21,6 +21,7 @@
     "react-scripts": "3.0.1",
     "react-simple-storage": "^1.4.1",
     "react-twitter-embed": "^2.0.8",
+    "react-vis": "^1.11.7",
     "react-youtube": "^7.9.0"
   },
   "scripts": {
